--- a/src/globals.css
+++ b/src/globals.css
@@ -11,7 +11,7 @@
   --color-bg-dark: #000000;
 
   --color-overlay: rgba(0, 0, 0, 0.7);
-  --color-rating: orange;
+  --color-rating: rgba(233, 10, 10, 0.911);
 }
 
 /* Text helpers */
